add search form

--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
     </header>
     <!-- Header end -->
 
+    <!-- Search form start -->
+    <form action="" id="search-form">
+      <input
+        type="search"
+        name=""
+        placeholder="Search here..."
+        id="search-box"
+      />
+      <label for="search-box" class="fas fa-search"></label>
+      <i class="fas fa-times" id="close"></i>
+    </form>
+    <!-- Search form end -->
+
     <!-- script -->
     <script src="./script.js"></script>
   </body>
