add about section

--- a/index.html
+++ b/index.html
@@ -212,6 +212,47 @@
     </section>
     <!-- Dishes section end -->
 
+    <!-- About section start -->
+    <section class="about" id="about">
+      <h3 class="sub-heading">about us</h3>
+      <h1 class="heading">why choose us?</h1>
+      <div class="row">
+        <div class="image">
+          <img src="./images/about-img.png" alt="" />
+        </div>
+        <div class="content">
+          <h3>best food in the country</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nisi
+            consequuntur molestiae earum porro esse dolores quis, rem officiis
+            ipsa voluptate obcaecati error soluta, voluptatem modi maxime.
+            Magnam, sunt quis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+            vero quod repellendus consectetur qui iste in voluptatem cupiditate
+            est ipsam.
+          </p>
+          <div class="icons-container">
+            <div class="icon">
+              <i class="fas fa-shipping-fast"></i>
+              <span>free dlivery</span>
+            </div>
+            <div class="icon">
+              <i class="fas fa-dollar-sign"></i>
+              <span>esey payment</span>
+            </div>
+            <div class="icon">
+              <i class="fas fa-headset"></i>
+              <span>24/7 service</span>
+            </div>
+          </div>
+          <a href="#" class="btn">see more</a>
+        </div>
+      </div>
+    </section>
+    <!-- About section end -->
+
     <!-- scripts -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
