add review section

--- a/index.html
+++ b/index.html
@@ -460,6 +460,105 @@
     </section>
     <!-- Menu section end -->
 
+    <!-- review section start -->
+    <section class="review" id="review">
+      <h3 class="sub-heading">customer's reviews</h3>
+      <h1 class="heading">what they say</h1>
+      <div class="swiper review-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide slide">
+            <i class="fas fa-quote-right"></i>
+            <div class="user">
+              <img src="./images/pic-1.png" alt="" />
+              <div class="user-info">
+                <h3>john doo</h3>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+              eius vel minima voluptas omnis quae reprehenderit fugit rerum fuga
+              sed eveniet iste alias nobis deserunt, necessitatibus sequi
+              laborum debitis sapiente!
+            </p>
+          </div>
+          <div class="swiper-slide slide">
+            <i class="fas fa-quote-right"></i>
+            <div class="user">
+              <img src="./images/pic-2.png" alt="" />
+              <div class="user-info">
+                <h3>john doo</h3>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+              eius vel minima voluptas omnis quae reprehenderit fugit rerum fuga
+              sed eveniet iste alias nobis deserunt, necessitatibus sequi
+              laborum debitis sapiente!
+            </p>
+          </div>
+          <div class="swiper-slide slide">
+            <i class="fas fa-quote-right"></i>
+            <div class="user">
+              <img src="./images/pic-3.png" alt="" />
+              <div class="user-info">
+                <h3>john doo</h3>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+              eius vel minima voluptas omnis quae reprehenderit fugit rerum fuga
+              sed eveniet iste alias nobis deserunt, necessitatibus sequi
+              laborum debitis sapiente!
+            </p>
+          </div>
+          <div class="swiper-slide slide">
+            <i class="fas fa-quote-right"></i>
+            <div class="user">
+              <img src="./images/pic-4.png" alt="" />
+              <div class="user-info">
+                <h3>john doo</h3>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+              eius vel minima voluptas omnis quae reprehenderit fugit rerum fuga
+              sed eveniet iste alias nobis deserunt, necessitatibus sequi
+              laborum debitis sapiente!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- review section end -->
+
     <!-- scripts -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
