--- a/index.html
+++ b/index.html
@@ -559,6 +559,67 @@
     </section>
     <!-- review section end -->
 
+    <!-- Order section start -->
+    <section class="order" id="order">
+      <h3 class="sub-heading">order now</h3>
+      <h1 class="heading">free and fast</h1>
+      <form action="">
+        <div class="inputBox">
+          <div class="input">
+            <span>your name</span>
+            <input type="text" name="" id="" placeholder="enter your name" />
+          </div>
+          <div class="input">
+            <span>your number</span>
+            <input
+              type="number"
+              name=""
+              id=""
+              placeholder="enter your number"
+            />
+          </div>
+          <div class="input">
+            <span>your order</span>
+            <input type="text" name="" id="" placeholder="enter food name" />
+          </div>
+          <div class="input">
+            <span>additional food</span>
+            <input type="text" name="" id="" placeholder="extra food" />
+          </div>
+          <div class="input">
+            <span>how much</span>
+            <input type="number" name="" id="" placeholder="how many order" />
+          </div>
+          <div class="input">
+            <span>date and time</span>
+            <input type="datetime-local" name="" id="" />
+          </div>
+          <div class="input">
+            <span>your address</span>
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="enter your adress"
+            ></textarea>
+          </div>
+          <div class="input">
+            <span>your massage</span>
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="enter your massage"
+            ></textarea>
+          </div>
+        </div>
+        <input type="submit" value="order now" class="btn" />
+      </form>
+    </section>
+    <!-- Order section end -->
+
     <!-- scripts -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
