add footer secticon and staticy navebar

--- a/index.html
+++ b/index.html
@@ -620,6 +620,47 @@
     </section>
     <!-- Order section end -->
 
+    <!-- Footer section start -->
+    <footer class="footer">
+      <div class="box-container">
+        <div class="box">
+          <h3>locations</h3>
+          <a href="#">egypt</a>
+          <a href="#">palestine</a>
+          <a href="#">saudi arabia</a>
+          <a href="#">United Arab Emirates</a>
+          <a href="#">jordan</a>
+        </div>
+        <div class="box">
+          <h3>quick links</h3>
+          <a href="#">home</a>
+          <a href="#">dishes</a>
+          <a href="#">about</a>
+          <a href="#">menu</a>
+          <a href="#">review</a>
+          <a href="#">order</a>
+        </div>
+        <div class="box">
+          <h3>connect info</h3>
+          <a href="#">+123-456-7890</a>
+          <a href="#">+111-222-3333</a>
+          <a href="#">mostafa813765@gmail.com</a>
+          <a href="#">exlanceee@gmail.com</a>
+          <a href="#">mashaia, Mansoura, Egypt</a>
+        </div>
+        <div class="box">
+          <h3>follow us</h3>
+          <a href="#">facebook</a>
+          <a href="#">twitter</a>
+          <a href="#">instagram</a>
+        </div>
+      </div>
+      <div class="credit">
+        copyright @ 2021 by <span> Mostafa Hassan </span>
+      </div>
+    </footer>
+    <!-- Footer section end -->
+
     <!-- scripts -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
