--- a/index.html
+++ b/index.html
@@ -661,6 +661,12 @@
     </footer>
     <!-- Footer section end -->
 
+    <!-- Loader start -->
+    <div class="loader-container">
+      <img src="./images/loader.gif" alt="" />
+    </div>
+    <!-- Loader end -->
+
     <!-- scripts -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
