--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum
                 dolore quasi labore?
               </p>
-              <a href="#" class="btn">order now</a>
+              <a href="#order" class="btn">order now</a>
             </div>
             <div class="image">
               <img src="./images/home-img-1.png" alt="" />
@@ -86,7 +86,7 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum
                 dolore quasi labore?
               </p>
-              <a href="#" class="btn">order now</a>
+              <a href="#order" class="btn">order now</a>
             </div>
             <div class="image">
               <img src="./images/home-img-2.png" alt="" />
@@ -100,7 +100,7 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum
                 dolore quasi labore?
               </p>
-              <a href="#" class="btn">order now</a>
+              <a href="#order" class="btn">order now</a>
             </div>
             <div class="image">
               <img src="./images/home-img-3.png" alt="" />
@@ -116,13 +116,13 @@
     <section class="dishes" id="dishes">
       <h3 class="sub-heading">our dishes</h3>
       <h1 class="heading">pobuler dishes</h1>
-
       <div class="box-container">
         <div class="box">
           <a href="#" class="fas fa-heart"></a>
           <a href="#" class="fas fa-eye"></a>
           <img src="./images/dish-1.png" alt="" />
           <h3>tasty food</h3>
+          <span>$15.99</span>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -130,14 +130,14 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <span>$15.99</span>
-          <a href="#" class="btn">add to cart</a>
+          <a href="#" class="fas fa-cart-plus"></a>
         </div>
         <div class="box">
           <a href="#" class="fas fa-heart"></a>
           <a href="#" class="fas fa-eye"></a>
           <img src="./images/dish-2.png" alt="" />
           <h3>tasty food</h3>
+          <span>$15.99</span>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -145,14 +145,14 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <span>$15.99</span>
-          <a href="#" class="btn">add to cart</a>
+          <a href="#" class="fas fa-cart-plus"></a>
         </div>
         <div class="box">
           <a href="#" class="fas fa-heart"></a>
           <a href="#" class="fas fa-eye"></a>
           <img src="./images/dish-3.png" alt="" />
           <h3>tasty food</h3>
+          <span>$15.99</span>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -160,14 +160,14 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <span>$15.99</span>
-          <a href="#" class="btn">add to cart</a>
+          <a href="#" class="fas fa-cart-plus"></a>
         </div>
         <div class="box">
           <a href="#" class="fas fa-heart"></a>
           <a href="#" class="fas fa-eye"></a>
           <img src="./images/dish-4.png" alt="" />
           <h3>tasty food</h3>
+          <span>$15.99</span>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -175,14 +175,14 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <span>$15.99</span>
-          <a href="#" class="btn">add to cart</a>
+          <a href="#" class="fas fa-cart-plus"></a>
         </div>
         <div class="box">
           <a href="#" class="fas fa-heart"></a>
           <a href="#" class="fas fa-eye"></a>
           <img src="./images/dish-5.png" alt="" />
           <h3>tasty food</h3>
+          <span>$15.99</span>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -190,14 +190,14 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <span>$15.99</span>
-          <a href="#" class="btn">add to cart</a>
+          <a href="#" class="fas fa-cart-plus"></a>
         </div>
         <div class="box">
           <a href="#" class="fas fa-heart"></a>
           <a href="#" class="fas fa-eye"></a>
           <img src="./images/dish-6.png" alt="" />
           <h3>tasty food</h3>
+          <span>$15.99</span>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -205,8 +205,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <span>$15.99</span>
-          <a href="#" class="btn">add to cart</a>
+          <a href="#" class="fas fa-cart-plus"></a>
         </div>
       </div>
     </section>
@@ -247,7 +246,9 @@
               <span>24/7 service</span>
             </div>
           </div>
-          <a href="#" class="btn">see more</a>
+          <a href="#" class="see-more"
+            >see more <i class="fas fa-angle-right"></i
+          ></a>
         </div>
       </div>
     </section>
@@ -262,6 +263,7 @@
           <div class="image">
             <img src="/images/menu-1.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-cart-plus"></a>
           </div>
           <div class="content">
             <div class="stars">
@@ -272,18 +274,18 @@
               <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>delicious food</h3>
+            <span class="price">$12.99</span>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
               repudiandae.
             </p>
-            <a href="#" class="btn">add to cart</a>
-            <span class="price">$12.99</span>
           </div>
         </div>
         <div class="box">
           <div class="image">
             <img src="/images/menu-2.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-cart-plus"></a>
           </div>
           <div class="content">
             <div class="stars">
@@ -294,18 +296,18 @@
               <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>delicious food</h3>
+            <span class="price">$12.99</span>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
               repudiandae.
             </p>
-            <a href="#" class="btn">add to cart</a>
-            <span class="price">$12.99</span>
           </div>
         </div>
         <div class="box">
           <div class="image">
             <img src="/images/menu-3.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-cart-plus"></a>
           </div>
           <div class="content">
             <div class="stars">
@@ -316,18 +318,18 @@
               <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>delicious food</h3>
+            <span class="price">$12.99</span>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
               repudiandae.
             </p>
-            <a href="#" class="btn">add to cart</a>
-            <span class="price">$12.99</span>
           </div>
         </div>
         <div class="box">
           <div class="image">
             <img src="/images/menu-4.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-cart-plus"></a>
           </div>
           <div class="content">
             <div class="stars">
@@ -338,18 +340,18 @@
               <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>delicious food</h3>
+            <span class="price">$12.99</span>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
               repudiandae.
             </p>
-            <a href="#" class="btn">add to cart</a>
-            <span class="price">$12.99</span>
           </div>
         </div>
         <div class="box">
           <div class="image">
             <img src="/images/menu-5.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-cart-plus"></a>
           </div>
           <div class="content">
             <div class="stars">
@@ -360,18 +362,18 @@
               <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>delicious food</h3>
+            <span class="price">$12.99</span>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
               repudiandae.
             </p>
-            <a href="#" class="btn">add to cart</a>
-            <span class="price">$12.99</span>
           </div>
         </div>
         <div class="box">
           <div class="image">
             <img src="/images/menu-6.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-cart-plus"></a>
           </div>
           <div class="content">
             <div class="stars">
@@ -382,18 +384,18 @@
               <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>delicious food</h3>
+            <span class="price">$12.99</span>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
               repudiandae.
             </p>
-            <a href="#" class="btn">add to cart</a>
-            <span class="price">$12.99</span>
           </div>
         </div>
         <div class="box">
           <div class="image">
             <img src="/images/menu-7.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-cart-plus"></a>
           </div>
           <div class="content">
             <div class="stars">
@@ -404,18 +406,18 @@
               <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>delicious food</h3>
+            <span class="price">$12.99</span>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
               repudiandae.
             </p>
-            <a href="#" class="btn">add to cart</a>
-            <span class="price">$12.99</span>
           </div>
         </div>
         <div class="box">
           <div class="image">
             <img src="/images/menu-8.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-cart-plus"></a>
           </div>
           <div class="content">
             <div class="stars">
@@ -426,18 +428,18 @@
               <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>delicious food</h3>
+            <span class="price">$12.99</span>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
               repudiandae.
             </p>
-            <a href="#" class="btn">add to cart</a>
-            <span class="price">$12.99</span>
           </div>
         </div>
         <div class="box">
           <div class="image">
             <img src="/images/menu-9.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-cart-plus"></a>
           </div>
           <div class="content">
             <div class="stars">
@@ -448,12 +450,11 @@
               <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>delicious food</h3>
+            <span class="price">$12.99</span>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
               repudiandae.
             </p>
-            <a href="#" class="btn">add to cart</a>
-            <span class="price">$12.99</span>
           </div>
         </div>
       </div>
