--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food restaurant</title>
+    <title>Resto.</title>
+    <!-- favicon -->
+    <link rel="icon" href="./images/french-fries.png" type="image/png" />
+
     <!-- swiper cdn -->
     <link
       rel="stylesheet"
