update menu images

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       <div class="box-container">
         <div class="box">
           <div class="image">
-            <img src="/images/menu-1.jpg" alt="" />
+            <img src="./images/menu-1.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-cart-plus"></a>
           </div>
@@ -286,7 +286,7 @@
         </div>
         <div class="box">
           <div class="image">
-            <img src="/images/menu-2.jpg" alt="" />
+            <img src="./images/menu-2.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-cart-plus"></a>
           </div>
@@ -308,7 +308,7 @@
         </div>
         <div class="box">
           <div class="image">
-            <img src="/images/menu-3.jpg" alt="" />
+            <img src="./images/menu-3.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-cart-plus"></a>
           </div>
@@ -330,7 +330,7 @@
         </div>
         <div class="box">
           <div class="image">
-            <img src="/images/menu-4.jpg" alt="" />
+            <img src="./images/menu-4.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-cart-plus"></a>
           </div>
@@ -352,7 +352,7 @@
         </div>
         <div class="box">
           <div class="image">
-            <img src="/images/menu-5.jpg" alt="" />
+            <img src="./images/menu-5.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-cart-plus"></a>
           </div>
@@ -374,7 +374,7 @@
         </div>
         <div class="box">
           <div class="image">
-            <img src="/images/menu-6.jpg" alt="" />
+            <img src="./images/menu-6.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-cart-plus"></a>
           </div>
@@ -396,7 +396,7 @@
         </div>
         <div class="box">
           <div class="image">
-            <img src="/images/menu-7.jpg" alt="" />
+            <img src="./images/menu-7.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-cart-plus"></a>
           </div>
@@ -418,7 +418,7 @@
         </div>
         <div class="box">
           <div class="image">
-            <img src="/images/menu-8.jpg" alt="" />
+            <img src="./images/menu-8.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-cart-plus"></a>
           </div>
@@ -440,7 +440,7 @@
         </div>
         <div class="box">
           <div class="image">
-            <img src="/images/menu-9.jpg" alt="" />
+            <img src="./images/menu-9.jpg" alt="" />
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-cart-plus"></a>
           </div>
